# fe-question-bank-service

./: .dockerignore  .env.vps.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: deploy.yml
data/: question_keyword_search_fixtures.json  question_keyword_taxonomy.json
docs/: 01_project_overview.md  02_architecture.md  03_api_spec.md  04_data_model.md  05_security_deployment.md  06_integration_migration.md  07_testing_operations.md  08_technical_stack.md  09_deliverables.md  CONSUMER_INTEGRATION_GUIDE.md  CURRENT_PROJECT_MIGRATION_GUIDE.md  PROJECT_DOCUMENTATION_MAP.md  PROJECT_GUIDE.md  TODO.md  question-keyword-generation-report.md  question-keyword-taxonomy.md
docs/todolist/: 14_QUESTION_ASSET_SERVICE_MIGRATION.md
scripts/: backup_db.py  generate_daily_practice.py  generate_question_keywords.py  populate_learning_explanations.py  validate_question_bank.py
src/question_bank_service/: __init__.py  app.py  config.py  daily_practice.py
src/question_bank_service/admin/: __init__.py  router.py  schemas.py  service.py
src/question_bank_service/db/: __init__.py  repositories.py  sqlite.py
src/question_bank_service/operations/: __init__.py  backup.py  validate.py
tests/: test_admin_api.py  test_config.py  test_daily_practice.py  test_deployment_files.py  test_health.py  test_html_parser.py  test_learning_explanation_generator.py  test_operations_scripts.py  test_question_keyword_data.py  test_runtime_api.py  test_sqlite_repository.py  test_static_assets.py  test_validators.py
(+8 files in other folders)
